# dnserver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dev_requirements.txt  dnserver.py  docker-compose.yml  example_zones.toml  example_zones.txt  pyproject.toml  requirements.txt  setup.py  test_dnsserver.py
.github/workflows/: ci.yml
dnserver/: __init__.py  __main__.py  cli.py  common.py  config.py  dnssec.py  load_records.py  main.py  resolver.py  version.py
dockertest/: Dockerfile  requirements.txt  run.py
requirements/: linting.in  linting.txt  pyproject.txt  testing.in  testing.txt
tests/: test_cli.py  test_dnsserver.py  test_load.py
